# fluid-diff

./: .gitignore  CMakeLists.txt  Makefile  README.md  controls.c  example_image.c  fluid_sample.inl  gaussian.c  keyframe.c  main.c  setup.sh  simplified.c  test-1.output.ini  test.config.ini
cmake/: Slang.cmake
configs/: fluiddiff.config.ini  letter1.config.ini  letter2.config.ini  letter9.config.ini  letterC.config.ini  letterE.config.ini  letterS.config.ini  letter기.config.ini  letter녕.config.ini  letter안.config.ini  letter연.config.ini  none.config.ini  test.config.ini  test_inv.config.ini  tzumaoli.config.ini
renders/controls/: 1_20260609_191520.controls  2_20260609_191519.controls  9_20260609_191519.controls  letterc_20260609_182219.controls  lettere_20260609_182318.controls  letters_20260609_182300.controls  test_1.controls  tzumaoli_20260610_063147.controls
src/: config.c  config.h  controls.c  controls.h  fluid.h  fluid_sample.inl  gaussian.c  keyframe.c  opt_lbfgs.h  smokey-gpu.c  smokey.c  util.h
src/shaders/: ApplyControl.slang  Fluid.slang  Render.slang  Update.slang  bloom.fs
tests/: nlopt.c  text_with_dots.c
